[gd_scene load_steps=4 format=3 uid="uid://cgvuyvyxyia0a"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_2wvgh"]

[sub_resource type="LabelSettings" id="LabelSettings_ti2e4"]
font_size = 55

[sub_resource type="Theme" id="Theme_owaen"]
Button/colors/font_color = Color(0.701961, 0.0941176, 0.352941, 1)

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_2wvgh")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.278431, 0.278431, 0.278431, 0.478431)

[node name="MainMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_ti2e4")
horizontal_alignment = 1

[node name="Resume" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Resume"
flat = true

[node name="Settings" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Settings"
flat = true

[node name="Exit" type="Button" parent="MainMenu"]
layout_mode = 2
theme = SubResource("Theme_owaen")
text = "Exit"
flat = true

[connection signal="pressed" from="MainMenu/Resume" to="." method="_on_resume"]
[connection signal="pressed" from="MainMenu/Settings" to="." method="_on_settings_clicked"]
[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_exit_clicked"]
